<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.sicredi.events.presentation.view.events.details.EventDetailsActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_view_event_poster"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/written_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/BottomRoundedImageView"
                    tools:layout_height="200dp" />

                <ImageView
                    android:id="@+id/button_go_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@id/image_view_event_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout_event_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/event_rounded_background_32"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline">

                    <TextView
                        android:id="@+id/text_view_event_title"
                        style="@style/HeadlineTextAppearance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Feira de Produtos Naturais e Orgânicos" />

                    <TextView
                        android:id="@+id/text_view_event_date"
                        style="@style/SubTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_event_title"
                        tools:text="Sábado, 20 de janeiro" />

                    <TextView
                        android:id="@+id/text_view_description_hint"
                        style="@style/HeadlineTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/description_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_event_date" />

                    <TextView
                        android:id="@+id/text_view_description"
                        style="@style/TextAppearance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_description_hint"
                        tools:text="Toda quarta-feira, das 17h às 22h, encontre a feira mais charmosa de produtos frescos, naturais e orgânicos no estacionamento do Shopping. Sintonizado com a tendência crescente de busca pela alimentação saudável, consumo consciente e qualidade de vida. \n\nAs barracas terão grande variedade de produtos, como o shiitake cultivado em Ibiporã há mais de 20 anos, um sucesso na mesa dos que não abrem mão do saudável cogumelo na dieta. Ou os laticínios orgânicos da Estância Baobá, famosos pelo qualidade e modo de fabricação sustentável na vizinha Jaguapitã. Também estarão na feira as conhecidas compotas e patês tradicionais da Pousada Marabú, de Rolândia." />

                    <TextView
                        android:id="@+id/text_view_event_price_hint"
                        style="@style/HeadlineTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/price_label"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_description" />

                    <TextView
                        android:id="@+id/text_view_price"
                        style="@style/TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_event_price_hint"
                        tools:text="R$ 20,00" />

                    <TextView
                        android:id="@+id/text_view_location_hint"
                        style="@style/HeadlineTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/check_in_location_hint"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_price" />

                    <fragment
                        android:id="@+id/google_map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:tag="google_map"
                        app:cameraZoom="15"
                        app:layout_constraintTop_toBottomOf="@id/text_view_location_hint"
                        app:uiScrollGestures="false"
                        app:uiZoomGestures="false"
                        tools:layout_editor_absoluteX="16dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_make_check_in"
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:layout_marginHorizontal="48dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="16dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/do_check_in"
                        android:textAllCaps="false"
                        android:textColor="@color/colorOffWhite"
                        app:cornerRadius="22dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/google_map"
                        app:strokeColor="@color/colorOffWhite"
                        app:strokeWidth="1dp" />

                    <TextView
                        android:id="@+id/text_view_check_in_done"
                        style="@style/TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/check_in_done"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/google_map" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.sicredi.events.presentation.util.placeholder.PlaceholderView
            android:id="@+id/placeholder_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>